# polynomial-translator

./: CMakeLists.txt  README.md
include/arithm_translator/: calc.h  calculator.h  connect.cpp  interface.cpp  interface.h  parser.cpp  parser.h  stack.h  translator.h
include/arithm_translator/calc/: calc.cpp
include/arithm_translator/interface/: interface.cpp
include/arithm_translator/old/: calc.cpp  calc.h  connect.cpp  connect.h  converter.cpp  converter.h  stack.h
include/arithm_translator/parser/: parser.h
include/array/: ord_arr.h  unord_arr.h
include/hash_table/: address_hash.h  hash_chain.h  ord_tab.h
include/polinom/: List.h  polinom.cpp  polinom.h
include/polinom/old/: List.h  polinom.cpp  polinom.h
include/search_tree/: avl_tree.h  bs_tree.h  rb_tree.h
src/: main.cpp
test/: address_hash_test.cpp  avl_tree_test.cpp  binary_tree_test.cpp  calc_translator_test.cpp  connect_translator_test.cpp  convert_translator_test.cpp  hash_chain.cpp  ord_arr_test.cpp  ord_table_test.cpp  parser_translator_test.cpp  polinom_test.cpp  rb_tree_tests.cpp  test_main.cpp  translator_test.cpp  unord_arr_test.cpp  unord_tree_test.cpp
test/old/: calc_translator_test.cpp  convert_translator_test.cpp  parser_translator_test.cpp
